fixed some instruction and saving data issues inside them. Aligned the beginning of the spaceship landing animation with after everything was loaded (and effectively together with the cost animation)

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   background-size: 100vw 100vh;
 }
 
-#spaceship {
+.landing_spaceship {
   position: absolute;
   top: 50vh;
   transform: translate(-50%, -50%);
